[[Spesiaal:LintErrors/bogus-image-options]], replaced: ||thumb|| → |thumb| (2), |thumb|right| → |thumb| (4), N1.1% → N1,1% (3) using [[Project:AWB|AWB]]

--- a/Ghana.mw
+++ b/Ghana.mw
@@ -21,12 +21,12 @@
 | feestdag =
 | tld = Gh | laandkode = GH | tel = 233
 }}
-'''Ghana''' is n laand in West-[[Afrika]]. t Hef op t westn ne greanze met [[Ivoorkuste]], met [[Burkina Faso]] op t noordn, [[Togo]] op t oostn en de [[Guineese Golf]] op t zuudn. t Woard ''Ghana'' beteeknt "Kriegskeunink". <ref>Jackson, John G. ''Introduction to African Civilizations'', 2001. Bladziede 201.</ref> en hef te maakn met t oolde [[Ghanese Riek]].
+'''Ghana''' is n laand in West-[[Afrika]]. t Hef op t westn ne greanze met [[Ivoorkuste]], met [[Burkina Faso]] op t noordn, [[Togo]] op t oostn en de [[Guineese Golf]] op t zuudn. t Woard ''Ghana'' beteeknt "Kriegskeunink".<ref>Jackson, John G. ''Introduction to African Civilizations'', 2001. Bladziede 201.</ref> en hef te maakn met t oolde [[Ghanese Riek]].
 
 [[kolonialisme|Vuur at de Europeaann kömn]], woonn dr in Ghana verskeaidene volker, heuwdzakelik [[Akan (volk)|Akan]]. Dee hadn verskilnde keuninkriekn, woereunter t [[Ashantiriek]], de [[Akwamu]], de [[Akyem]], [[Bonoman]], [[Denkyira]] en t [[Fante]]volk. Dr besteundn ook nit-Akanstoatn van t [[Ga-volk]] en de [[Dagomba]]. Vuur at de Europeaann kömn was dr nen riekn haandel met aandere Afrikaanse laandn, um t völle [[goold]] wat Ghana hef. In t [[15e eeuw|15de joarhoonderd]] kömn de [[Portugal|Portugeezn]], en in [[1874]] stichen de [[Groot-Brittanje|Britn]] de [[Gooldkuste (Britse kolonie)|Kroonkolonie Gooldkuste]] oawer deeln van Ghana.<ref>MacLean, Iain. ''Rational Choice and British Politics: An Analysis of Rhetoric and Manipulation from Peel to Blair'', 2001. Bladziede 76.</ref>
-In [[1957]] wör Gooldkuste as eerste laand oonder n [[Sahara]]<ref>[http://www.bbc.co.uk/worldservice/africa/features/storyofafrica/14chapter3.shtml BBC. First For Sub-Saharan Africa.] Bekekn op 29 februwoari 2012</ref><ref>[http://exploringafrica.matrix.msu.edu/images/decolinization.jpg Exploringafrica.matrix.msu.edu Exploring Africa - Decolinization]. bekekn op 29 februwoari 2012</ref> onofhaankelik van t [[Verenigd Keuninkriek]].<ref>[http://www.archive.org/details/1957-03-07_A_New_Nation Universal Newsreel. Video: A New Nation. Gold Coast becomes Ghana In Ceremony, 1957/03/07 (1957)]. Bekekn op 20 februwoari 2012</ref> n Naam Ghana wör keuzn um terugge te wiezen noar t oolde Ghanese Riek, wat vroger n groot deel van West-Afrika besleug.  
+In [[1957]] wör Gooldkuste as eerste laand oonder n [[Sahara]]<ref>[http://www.bbc.co.uk/worldservice/africa/features/storyofafrica/14chapter3.shtml BBC. First For Sub-Saharan Africa.] Bekekn op 29 februwoari 2012</ref><ref>[http://exploringafrica.matrix.msu.edu/images/decolinization.jpg Exploringafrica.matrix.msu.edu Exploring Africa - Decolinization]. bekekn op 29 februwoari 2012</ref> onofhaankelik van t [[Verenigd Keuninkriek]].<ref>[http://www.archive.org/details/1957-03-07_A_New_Nation Universal Newsreel. Video: A New Nation. Gold Coast becomes Ghana In Ceremony, 1957/03/07 (1957)]. Bekekn op 20 februwoari 2012</ref> n Naam Ghana wör keuzn um terugge te wiezen noar t oolde Ghanese Riek, wat vroger n groot deel van West-Afrika besleug.
 
-Ghana is lid van de [[Zuud-Atlantiese Vrea- en Saamnwarkings Zone]], de [[Vereanigde Nasies]], t [[Gemenebest van Nasies]], t [[Afrikaans Verboond]], de [[Ekonomiese Gemeenskop van West-Afrikaanse Stoatn]] en n verwaant lid van [[La Francophonie]]. Ghana is ene van de grötste oetvoorders van [[kakao]]boonn<ref>[http://www.worldcrops.com/wp-content/uploads/2010/11/WORLD-COCOA-May-03-2011-WorldCrops.com_.pdf WordCrops.com. World Cocoa - WorldCrops.com]. bekekn op 29 februwoari 2012</ref>. Doarbie ligt in Ghana t [[Voltameer]], wat t grötste keunstmoatige meer is van de wearld, wat oppervlak angeet. <ref>[http://geography.about.com/library/cia/blcghana.htm Geography.about.com]. Bekekn op 26 juni 2010</ref>
+Ghana is lid van de [[Zuud-Atlantiese Vrea- en Saamnwarkings Zone]], de [[Vereanigde Nasies]], t [[Gemenebest van Nasies]], t [[Afrikaans Verboond]], de [[Ekonomiese Gemeenskop van West-Afrikaanse Stoatn]] en n verwaant lid van [[La Francophonie]]. Ghana is ene van de grötste oetvoorders van [[kakao]]boonn<ref>[http://www.worldcrops.com/wp-content/uploads/2010/11/WORLD-COCOA-May-03-2011-WorldCrops.com_.pdf WordCrops.com. World Cocoa - WorldCrops.com]. bekekn op 29 februwoari 2012</ref>. Doarbie ligt in Ghana t [[Voltameer]], wat t grötste keunstmoatige meer is van de wearld, wat oppervlak angeet.<ref>[http://geography.about.com/library/cia/blcghana.htm Geography.about.com]. Bekekn op 26 juni 2010</ref>
 
 == Laandsindeling ==
 Ghana hef 10 strekn, dee't bie mekoar in 170 distriktn opdeeld zeent.
@@ -43,14 +43,14 @@ Ghana hef 10 strekn, dee't bie mekoar in 170 distriktn opdeeld zeent.
 * Regio West, heuwdstad [[Sekondi-Takoradi]]
 
 == Laand ==
-[[Bestaand:Beach with palms Ghana.jpg|thumb|right|Strand in Ghana]]
+[[Bestaand:Beach with palms Ghana.jpg|thumb|Strand in Ghana]]
 [[Bestaand:Elefanten Mole National Park.jpg|thumb|left|200px|Olifaantn in Mole Nasjonale Park]]
 
-Ghana lig an de [[Golf van Guinea]], net wat boawn n [[evenaar]], woerduur t n woarm klimaat hef. Ghana is 238.500 kilometer in t veerkaant. [[Togo]] ligt op t oostn, [[Ivoorkuste]] op t westn en [[Burkina Faso]] op t noordn. Ghana ligt precies op n [[nulmeridiaan]] van de wearld, en precies duur de industriestad [[Tema]]. Van alle laandn lig Ghana t kortst bie t "middelpeunt" (0°, 0°) van de wearld; zo'n 614 km noord doarvan.
+Ghana lig an de [[Golf van Guinea]], net wat boawn n [[evenaar]], woerduur t n woarm klimaat hef. Ghana is 238.500 kilometer in t veerkaant. [[Togo]] ligt op t oostn, [[Ivoorkuste]] op t westn en [[Burkina Faso]] op t noordn. Ghana ligt precies op n [[nulmeridiaan]] van de wearld, en precies duur de industriestad [[Tema]]. Van alle laandn lig Ghana t kortst bie t "middelpeunt" (0°, 0°) van de wearld; zo'n 614&nbsp;km noord doarvan.
 
-[[Bestaand:VoltaRiverWithAdombeBridge183-1-.jpg||thumb||right|t [[Voltameer]] in Ghana is t grötste waterbekken in de wearld en löp van de [[Akosombodam]] in t zuudoostn töt t städke [[Yapei]], 400km noar t noordn. t Meer leawert stroom, transport noar t binnlaand, en kan vuur bewatering en visboerderieje zorgen]] 
+[[Bestaand:VoltaRiverWithAdombeBridge183-1-.jpg|thumb|t [[Voltameer]] in Ghana is t grötste waterbekken in de wearld en löp van de [[Akosombodam]] in t zuudoostn töt t städke [[Yapei]], 400km noar t noordn. t Meer leawert stroom, transport noar t binnlaand, en kan vuur bewatering en visboerderieje zorgen]]
 
-t Laand hef vlakke stukke, lege heuwels en n antal riviern. Ghana kan in vief verskilnde geografiese deeln verdeeld wordn. De kustliene is heuwdzakelik leeg en zaanderig met doarachter vlakke stukke en buskes, en wörd duurkruuzet duur verskilnde riviern en streumkes, terwiel t noordelike deel van t laand besteet oet hoogvlaktes. t Zuudwestn en zuudmiddeln van Ghana is ne bosrieke, hooggeleagne strekke, met doarbie in t [[Ashanti (strekke)|Asjantihooglaand]] en de [[Kwahuvlakte]]. De heuwelachtige akuapim-Togoboargraand löp langs de oostergreanze. 
+t Laand hef vlakke stukke, lege heuwels en n antal riviern. Ghana kan in vief verskilnde geografiese deeln verdeeld wordn. De kustliene is heuwdzakelik leeg en zaanderig met doarachter vlakke stukke en buskes, en wörd duurkruuzet duur verskilnde riviern en streumkes, terwiel t noordelike deel van t laand besteet oet hoogvlaktes. t Zuudwestn en zuudmiddeln van Ghana is ne bosrieke, hooggeleagne strekke, met doarbie in t [[Ashanti (strekke)|Asjantihooglaand]] en de [[Kwahuvlakte]]. De heuwelachtige akuapim-Togoboargraand löp langs de oostergreanze.
 
 t [[Voltameer]] neamp t grötste deel van midn Ghana in. t Heugste peunt van Ghana is n boarg [[Afadjato]], den't 885 meter hoge is, en in de Akwapim-Togoboargraand lig.
 
@@ -91,21 +91,21 @@ Ghana hef ne middelmoatig inkomnsekonomie en steet bekeand as ne leeg-middelmoat
 
 n Ghanesen beurs is n doardegrösten van Afrika, noa [[Zuud-Afrika]] en [[Nigeria]].<ref>[http://www.icbuk.com/images/uploads/ICBUKGhanaReportSeptember2011.pdf Intercontinental Bank. Ghana Market Update]. Bekekn op 26 meart 2012</ref>
 
-Ghana hef völle natuurlike riekdomn. In de koloniale tied was Ghana al bekeand um t goold wat dr te haaln was, en nog aait is Ghana ene van de grötste goolddelvers van de wearld.<ref>[http://goldinvestingnews.com/9230/top-10-gold-producers.html Brown, Dave. ''Top 10 Gold Producers''. Gold Investing News.] Bekekn op 8 meart 2012</ref> Ghana hef nog aandere belangrieke oetvoorprodukte, zo as kakauboonn, roewn öllie, eardgas, hoolt, elektrisiteat, diamaantn, [[bauxiet]],<ref>[http://www.aluworks.com/site/index.php?option=com_content&view=article&id=63&Itemid=60&734e1554a786d82e908c7c85044123c2=746b376516a36724613692ecab763f6f Aluworks.com.] Bekekn op 26 juni 2010</ref> en [[mangaan]], mer Ghana blif probleemn met stroom en gastekortn hebn, woermet t n ontwikkelingslaand blif. In [[1965]] wör n [[Akosombodam]] duur Osagyefo Dr. [[Kwame Nkrumah]] ebouwd in de [[Voltarivier]]. Den leawert stroom vuur Ghana en umlignde laandn. 
+Ghana hef völle natuurlike riekdomn. In de koloniale tied was Ghana al bekeand um t goold wat dr te haaln was, en nog aait is Ghana ene van de grötste goolddelvers van de wearld.<ref>[http://goldinvestingnews.com/9230/top-10-gold-producers.html Brown, Dave. ''Top 10 Gold Producers''. Gold Investing News.] Bekekn op 8 meart 2012</ref> Ghana hef nog aandere belangrieke oetvoorprodukte, zo as kakauboonn, roewn öllie, eardgas, hoolt, elektrisiteat, diamaantn, [[bauxiet]],<ref>[http://www.aluworks.com/site/index.php?option=com_content&view=article&id=63&Itemid=60&734e1554a786d82e908c7c85044123c2=746b376516a36724613692ecab763f6f Aluworks.com.] Bekekn op 26 juni 2010</ref> en [[mangaan]], mer Ghana blif probleemn met stroom en gastekortn hebn, woermet t n ontwikkelingslaand blif. In [[1965]] wör n [[Akosombodam]] duur Osagyefo Dr. [[Kwame Nkrumah]] ebouwd in de [[Voltarivier]]. Den leawert stroom vuur Ghana en umlignde laandn.
 
 === Stoatsskoold ===
 Eand 2011 was Ghana's stoatsskoold esteegn töt $18 miljard, vanof $8 miljard in 2008. In 1966 was de stoatsskoold nog $1 miljard, doo't t laand nog regeard wör duur Osagyefo Dr. [[Kwame Nkrumah]], en Ghana ene van de riekste en sosjaal vuuroetstoande deeln van Afrika was. t Inkomn per inwonner was hoaste geliek an det van [[Zuud-Korea]].<ref>[http://www.ifpri.org/sites/default/files/publications/rr171.pdf ifpri.org. A new era of transformation in Ghana.] bekekn op 16 februwoari 201</ref> Doarnoa gung t rap, doo't Ghana 20 joar oonder regearing köm van [[Jerry John Rawlings]], töt an [[2001]]. Dr wör onneudig leend van t [[Internasjonaal Monetear Fonds]] (IMF).
 <ref>[http://www.thestatesmanonline.com/pages/news_detail.php?newsid=10897&section=1 Thestatesmanonline.com. ''Mills takes Ghana's debt to GH¢23.4 billion'']. Bekekn op 9 January 2012</ref> n Good vuurbeeld hiervan was t leenn van $3 miljard duur [[John Atta Mills]] van de [[Sjinese Ontwikkelingsbaanke]], in ruul vuur öllie van de [[Ghanese Nasjonale Petröllie Korporasie]] (GNPC) an de Sjinese roewn öllie-verwoarkers, vuur n geheim bedrag um de lening terugge te betaaln, ondaanks bezwoar van n oawerweldigend deel van t [[Ghanese Parlemeant]] en t IMF, umdet de lening Ghana's öllieriekdom noar Sjina zo trekn, en dr vuur zol könn zorgen at Ghana de skooldn nit ofbetaaln kon.<ref>[http://www.ghananewsagency.org/details/Economics/Ghana-will-be-shortchanged-with-the-3-billion-dollars-Chinese-loan-Minority/?ci=3&ai=34013 Ghana News Agency.org. ''Ghana will be shortchanged with the 3-billion dollars Chinese loan – Minority'']. Skreewn: 27 september 2011. Bekekn: 9 januwoari 2012</ref>
 
-Opeenvolgende regearings nemt nog aait hulpe an van de [[Verenigde Stoaten]] en [[Europa (continent)|Europese]] laandn. n Vuurbeeld hiervan was de gift van €52 miljoen um [[moderstoarfte]] teegn te goan en gezoondheaid van moders te verbettern. Det kan Ghana ook zoonder boetnlaande hulpe en giftn.<ref>[http://www.ghanaweb.com/GhanaHomePage/health/artikel.php?ID=227452Ghanaweb.com. ''EU gives Ghana additional 52 million euros for maternal health''.] Skreewn op 11 januwoary 2012. Bekekn op 13 januwoari 2012</ref>    
+Opeenvolgende regearings nemt nog aait hulpe an van de [[Verenigde Stoaten]] en [[Europa (continent)|Europese]] laandn. n Vuurbeeld hiervan was de gift van €52 miljoen um [[moderstoarfte]] teegn te goan en gezoondheaid van moders te verbettern. Det kan Ghana ook zoonder boetnlaande hulpe en giftn.<ref>[http://www.ghanaweb.com/GhanaHomePage/health/artikel.php?ID=227452Ghanaweb.com. ''EU gives Ghana additional 52 million euros for maternal health''.] Skreewn op 11 januwoary 2012. Bekekn op 13 januwoari 2012</ref>
 
 === Woarkvolk ===
 Ghana hef 11,5 miljoen leu dee't köant woarkn.<ref>[https://africaknowledgelab.worldbank.org/akl/sites/africaknowledgelab.worldbank.org/files/report/Annexes%20for%20Ghana%20Education.pdf Annex 1: Political and Administrative System]. worldbank.org. Bekekn op 29 desember 2011.</ref> De ekonomie dreeit vuur 37,3% op laandbouw, en doarin woarket ongevear 56% van t woarkvolk. Dit zeent heuwdzakelik kleaine boern. Dr is mer weainig produksie in Ghana, zon 7,9%. Skoonwal Ghana oardig wat good op-eleaid woarkvolk hef, kiest regearings der vake vuur um bouwprojekte oet te besteadn an boetnlaandse bedriewe, zo as zelfs seempele huuze. Disse bedriewe nemt dan wier lokale bedriewe in n oarm vuur nen habbekrats, woerduur't t grote geeld aait noar t boetnlaand geet. Dr zeent al heel wat pogingen edoan um lokale Ghanese bedriewe op de vuurgroond te kriegn, mer in hoes- en weagnbouw hef det nog nit ewoarket, woerduur Ghana nog wier ofhaankelik blif van boetnlaandse bedriewe en t geeld doarhen geet.
 
 === Meunte ===
-Keukelig ekonomies beleid van vuurgoande militeare regearingn en regionale vreadesofspraakn zorgen vuur inflasie, weardevermeendering vuur de [[Cedi]], en onvrea bie t volk oawer Ghana's bezunigingn. Liekewel hef Ghana nog ene van de gezoondse ekonomiejn in Afrika. 
+Keukelig ekonomies beleid van vuurgoande militeare regearingn en regionale vreadesofspraakn zorgen vuur inflasie, weardevermeendering vuur de [[Cedi]], en onvrea bie t volk oawer Ghana's bezunigingn. Liekewel hef Ghana nog ene van de gezoondse ekonomiejn in Afrika.
 
-[[Bestaand:Elmina slave castle.jpg||thumb||right|240px|t Portugese [[Elminakasteel]] wör in 1873 duur [[Groot-Brittanje]] kocht. t Wörd ook wal t Kasteel van St. George eneumd. t was n eerstn haandelspost an n [[Guinesen Golf]], en doarmet t euldste Europese gebouw wat nog besteet, oonder de [[Sahara]]. t Kasteel wörd non erkeand duur [[UNESCO]] as [[Weareldarfgoodlieste|Wearldoarfgood]]]]
+[[Bestaand:Elmina slave castle.jpg|thumb|240px|t Portugese [[Elminakasteel]] wör in 1873 duur [[Groot-Brittanje]] kocht. t Wörd ook wal t Kasteel van St. George eneumd. t was n eerstn haandelspost an n [[Guinesen Golf]], en doarmet t euldste Europese gebouw wat nog besteet, oonder de [[Sahara]]. t Kasteel wörd non erkeand duur [[UNESCO]] as [[Weareldarfgoodlieste|Wearldoarfgood]]]]
 
 Juli [[2007]] begun de [[Ghanese Baanke]] met t heropweardeern van de Cedi ([[₵]]), noar Ghanese Cedi (GH₵). n Oawerstap was 1 Ghanese Cedi vuur elke 10.000 Cedi. De Ghanese Baanke gebreuk intensieve mediakampanjes um t volk kunnig te maakn met t nieje geeld.
 
@@ -120,9 +120,9 @@ In 1970 wördn dr in n oseaanboadem bie Ghana grote öllieweln oontdekt, mer tee
 
 vrog in de joarn '90 bekeek de GNPC alle vrogere weln van roewn öllie en eardgas, um te zeen of ze dee nit in eegn behear konn nemn, um zo de stoatskas an te vuln. De GNPC wol n driewnd stasjon opzetn vuur produksie, opslag, oawerslag, verwoarking en doarop [[gas-turbine]]s vuur stroomopwekking, um zo 620 miljoen m³ per dag te produseern, woervan't 135 megawatt stroom emaakt kon wordn vuur nasjonaal en regionaal gebroek. In 1992 kreeg de GNPC n kontrakt met [[Angola]]'s stoatsölliebedrief, dee't vuur de Ghanese kuste woln boarn. GNPC kreeg doarvuur n deel van n roewn öllie.
 
-De öllieraffinaderieje [[Tema]] oondergung ne grote herindeling, wat begun in [[1989]]. t Tweede deel van de herindeling begun in 1990, en t kostn bie mekoar zo'n $36 miljoen. Met disse herindeling wör de verdeling van vlöaiboar petrölliegas better van 28.000 noar 34.000 per dag. In 1992 wör an evöngn met t bouwn van de piepliene woermet alns vervoord mos wordn. De ofwoarkte öllie zol van vanof Tema noar de haawn van [[Akosombo]], en van doar oawer t Voltameer noar t noordn van Ghana vervoord wordn. Toch blif de verdeling nog aait ongeliek. Um de umstandigheedn nog wier te verbettern wördn dr vuur $28 miljoen öllieopslaagn in t hele laand bouwd. 
+De öllieraffinaderieje [[Tema]] oondergung ne grote herindeling, wat begun in [[1989]]. t Tweede deel van de herindeling begun in 1990, en t kostn bie mekoar zo'n $36 miljoen. Met disse herindeling wör de verdeling van vlöaiboar petrölliegas better van 28.000 noar 34.000 per dag. In 1992 wör an evöngn met t bouwn van de piepliene woermet alns vervoord mos wordn. De ofwoarkte öllie zol van vanof Tema noar de haawn van [[Akosombo]], en van doar oawer t Voltameer noar t noordn van Ghana vervoord wordn. Toch blif de verdeling nog aait ongeliek. Um de umstandigheedn nog wier te verbettern wördn dr vuur $28 miljoen öllieopslaagn in t hele laand bouwd.
 
-In 2007 wör n öllieveeld eveundn van 480 miljoen m³<ref>[http://web.archive.org/web/20071226200944/http://news.yahoo.com/s/ap/20071222/ap_on_re_af/ghana_oil_discovery_3 Yahoo News.com ''Ghana leader: Oil reserves at 3B barrels'']. Skreewn op 22 desember 2007 bekekn op 21 desember 2010.</ref> Öllie en gas wordt nog aait ewunn, en steeds mear.<ref>[http://www.rigzone.com/news/article.asp?a_id=57319 Rigzone.com. ''Kosmos Makes Second Oil Discovery Offshore Ghana'']. Skreewn op 25 februwoari 2008. Bekekn op 26 juni 2010</ref> Dr wörd ne onmeundige toovlood van kapitaal in de ekonomie verwochet in t eerste deel van 2011. Vanof dan verwochet t laand öllie op grote skoale te produseern, en de weenst wörd eskatt op 6% vuur 2011. 
+In 2007 wör n öllieveeld eveundn van 480 miljoen m³<ref>[http://web.archive.org/web/20071226200944/http://news.yahoo.com/s/ap/20071222/ap_on_re_af/ghana_oil_discovery_3 Yahoo News.com ''Ghana leader: Oil reserves at 3B barrels'']. Skreewn op 22 desember 2007 bekekn op 21 desember 2010.</ref> Öllie en gas wordt nog aait ewunn, en steeds mear.<ref>[http://www.rigzone.com/news/article.asp?a_id=57319 Rigzone.com. ''Kosmos Makes Second Oil Discovery Offshore Ghana'']. Skreewn op 25 februwoari 2008. Bekekn op 26 juni 2010</ref> Dr wörd ne onmeundige toovlood van kapitaal in de ekonomie verwochet in t eerste deel van 2011. Vanof dan verwochet t laand öllie op grote skoale te produseern, en de weenst wörd eskatt op 6% vuur 2011.
 
 De öllievuurroad van Ghana wörd eskatt op 790 miljoen m³<ref>McLure, Jason. [http://www.bloomberg.com/news/2010-12-01/ghana-oil-reserves-to-be-5-billion-barrels-in-5-years-as-fields-develop.html Bloomberg Television. ''Ghana Oil Reserves to Be 5 billion barrels in 5 years as fields develop]. 1 Desember 2010.</ref> wat de zesde-grötste van Afrika is en de 25ste van de wearld.
 
@@ -131,9 +131,9 @@ De öllievuurroad van Ghana wörd eskatt op 790 miljoen m³<ref>McLure, Jason. [
 
 In Ghana wont ongevear 24 miljoen leu. n Inheemsen en grötsten etniesen groep is Akan. Noa de onofhaankelikheaid wör t volk vuur t eerste teald in 1960. Doo warn dr 6,7 miljoen leu.<ref>"[http://countrystudies.us/ghana/33.htm Ghana – population]". [[Library of Congress Country Studies]].</ref> 45% van t volk is Akan (woer in met zeent enömn de [[Fantevolk|Fante]], [[Akyemvolk|Akyem]], [[Ashantivolk|Ashanti]], [[Kwahuvolk|Kwahu]], [[Akuapemvolk|Akuapem]], [[Nzemasproake|Nzema]], [[Abronvolk|Abron]], [[Akwamuvolk|Akwamu]], [[Ahantavolk|Ahanta]] en nog n poar aandern). Wieders wont dr nog zo'n 28 miljoen Akanleu oawer vear in aandere laandn.<ref>[http://www.jamaicaobserver.com/business/Jamaica-National-launches-new-Ghana-money-transfer-brand_9719123 Jamaicaobserver.com. ''Jamaica National launches new Ghana money transfer brand'']. Skreewn: 16 september 2011. Bekekn: 20 februwoari 2012</ref>
 
-Vandaag n dag wont dr 52 etniese groepn in Ghana.<ref>[http://www.logcluster.org/tools/lca/gha Logcluster.org. ''Logistics Capacity Assessment - Ghana]. bekekn op 7 april 2012</ref> Dr is skoonwal nooit gin verskel ewest tusken de verskilnde groepn, zo'j det vake in aandere Afrikaanse laandn zeet. De offisjele sproake is [[Engels]], mer de meeste Ghanezen sprekt ten minsten éne lokale sproake. 
+Vandaag n dag wont dr 52 etniese groepn in Ghana.<ref>[http://www.logcluster.org/tools/lca/gha Logcluster.org. ''Logistics Capacity Assessment - Ghana]. bekekn op 7 april 2012</ref> Dr is skoonwal nooit gin verskel ewest tusken de verskilnde groepn, zo'j det vake in aandere Afrikaanse laandn zeet. De offisjele sproake is [[Engels]], mer de meeste Ghanezen sprekt ten minsten éne lokale sproake.
 
-De grötste meenderheaidsgroepn zeent de [[Ewevolk|Ewe]] (ong. 2.200.000 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=102974GH WorldMap.org. World Map - People Group Name: Ewe]. Bekekn op 7 april 2012</ref>, [[Ga-Adangbevolk|Ga-Adangbe]] (woer met zeent inbegrepn de [[Ga-volk|Ga]], [[Adangbevolk|Adangbe]], [[Adavolk|Ada]], [[Krobovolk|Krobo]] en nog n poar aandern) (1.022.144 leu)<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=104520GH Worldmap.org. World Map - People Group Name: Ga]. Bekekn op 8 april 2012</ref><ref>[http://worldmap.org/getpeople.php?ROP_ROG3=100052GH Worldmap.org. World Map - People Group Name: Adangme]. Bekekn op 8 April 2012</ref> [[Gurmavolk|Gurma]] (702.000 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=103587GH Worldmap.org. World Map - People Group Name: Gurma]. Bekekn op 7 april 2012</ref> [[Dagaabavolk|Dagaaba]] (657.973 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=102365GH Worldmap.org. World Map - People Group Name: Dagaari (Dagaaba)] Bekekn op 8 april 2012</ref> [[Frafravolk|Frafra]] (635.866),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=111200GH Worldmap.org. World Map - People Group Name: Gurenne (Frafra)]. Bekekn op 8 april 2012</ref> [[Dagombavolk|Dagomba]] (618.101 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=102372GH Worldmap.org. World Map - People Group Name: Dagomba] Bekekn op 8 april 2012</ref> [[Guangvolk|Guang]] (354.567 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=103437GH Worldmap.org. World Map - People Group Name: Guang] Bekekn op 7 april 2012</ref> [[Mossivolk|Mossi]] (341.000 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=106781GH Worldmap.org. World Map - People Group Name: Mossi]. Bekekn op 7 april 2012</ref> [[Hausa leu|Hausa]] (172.000),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=103733GH Worldmap.org. World Map - People Group Name: Hausa]. Bekekn op: 7 april 2012</ref> [[Gurunsivolk|Gurunsi]] (154.000),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=105697GH Worldmap.org. World Map - People Group Name: Gurunsi] Bekekn op 7 april 2012</ref> [[Bissavolk|Bissa]] (126.000),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=101486GH Worldmap.org. World Map - People Group Name: Bisa]. Bekekn op 7 april 2012</ref> [[Fulavolk|Fulani]] (12.000), [[Blaanke Afrikaann]] (heuwdzakelik van [[Skotlaand|Skotsen]], [[Engelaand|Engelsen]], [[Skandinavië|Skandinaviesen]] ofkomst, en aandern), [[Libanon|Libaneezn]], en [[Sindhivolk|Sindhileu]]. De rest van de leu dee't non in Ghana wont maakt ongevear 3,6% oet van t totaal.  
+De grötste meenderheaidsgroepn zeent de [[Ewevolk|Ewe]] (ong. 2.200.000 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=102974GH WorldMap.org. World Map - People Group Name: Ewe]. Bekekn op 7 april 2012</ref>, [[Ga-Adangbevolk|Ga-Adangbe]] (woer met zeent inbegrepn de [[Ga-volk|Ga]], [[Adangbevolk|Adangbe]], [[Adavolk|Ada]], [[Krobovolk|Krobo]] en nog n poar aandern) (1.022.144 leu)<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=104520GH Worldmap.org. World Map - People Group Name: Ga]. Bekekn op 8 april 2012</ref><ref>[http://worldmap.org/getpeople.php?ROP_ROG3=100052GH Worldmap.org. World Map - People Group Name: Adangme]. Bekekn op 8 April 2012</ref> [[Gurmavolk|Gurma]] (702.000 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=103587GH Worldmap.org. World Map - People Group Name: Gurma]. Bekekn op 7 april 2012</ref> [[Dagaabavolk|Dagaaba]] (657.973 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=102365GH Worldmap.org. World Map - People Group Name: Dagaari (Dagaaba)] Bekekn op 8 april 2012</ref> [[Frafravolk|Frafra]] (635.866),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=111200GH Worldmap.org. World Map - People Group Name: Gurenne (Frafra)]. Bekekn op 8 april 2012</ref> [[Dagombavolk|Dagomba]] (618.101 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=102372GH Worldmap.org. World Map - People Group Name: Dagomba] Bekekn op 8 april 2012</ref> [[Guangvolk|Guang]] (354.567 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=103437GH Worldmap.org. World Map - People Group Name: Guang] Bekekn op 7 april 2012</ref> [[Mossivolk|Mossi]] (341.000 leu),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=106781GH Worldmap.org. World Map - People Group Name: Mossi]. Bekekn op 7 april 2012</ref> [[Hausa leu|Hausa]] (172.000),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=103733GH Worldmap.org. World Map - People Group Name: Hausa]. Bekekn op: 7 april 2012</ref> [[Gurunsivolk|Gurunsi]] (154.000),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=105697GH Worldmap.org. World Map - People Group Name: Gurunsi] Bekekn op 7 april 2012</ref> [[Bissavolk|Bissa]] (126.000),<ref>[http://worldmap.org/getpeople.php?ROP_ROG3=101486GH Worldmap.org. World Map - People Group Name: Bisa]. Bekekn op 7 april 2012</ref> [[Fulavolk|Fulani]] (12.000), [[Blaanke Afrikaann]] (heuwdzakelik van [[Skotlaand|Skotsen]], [[Engelaand|Engelsen]], [[Skandinavië|Skandinaviesen]] ofkomst, en aandern), [[Libanon|Libaneezn]], en [[Sindhivolk|Sindhileu]]. De rest van de leu dee't non in Ghana wont maakt ongevear 3,6% oet van t totaal.
 
 Noar Amerikaanse welle (US Department of State) is 69% [[Christendom|Kristelik]], 16% [[Islam|Moslim]] en de oawerige 15% haank n tradisjoneel geleuf an.
 <ref>[http://www.state.gov/g/drl/rls/irf/2007/90100.htm U.S. Department of State. ''International Religious Freedom Report 2007.] Bekekn op  5 December 2009</ref>
@@ -142,12 +142,12 @@ Noar Amerikaanse welle (US Department of State) is 69% [[Christendom|Kristelik]]
 [[Ethnologue]] gef ne lieste van 79 sproakn in Ghana.<ref>[http://www.ethnologue.com/show_country.asp?name=ghana Ethnologue: Languages of Ghana]</ref>. [[Engels]] is de offisjele sproake en wörd gebroekt in regearings- en haandelszaakn, en op de skooln. De inheemse Ghanese sproakn zeent oonderverdeeld in zes families van de [[Niger-Congosproakn]]. De [[Kwa (sproake)|Kwa-sproaken]], dee't duur ongevear 70% van de inwonners sprökn wörd, bestoat oet t [[Akan (sproake)|Akan]] en de [[Ga-Dangmesproakn]]. Disse wordt vuurnamelik sprökn in de zudelike helfte van t laand, langs de Voltarivier. De [[Gbe-sproakn]], dee't vroger bie Kwa heurdn, wordt verteegnwoordigd duur t [[Ewe (sproake)|Ewe]], wat sprökn wörd op t zuudoostn van de Voltarivier. De [[Gursproaken|Gur-sproakfamilie]] besteet oet t [[Dagbani (sproake)|Dagbani]], [[Dagaare (sproake)|Dagaare]] en [[Frafra (sproake)|Frafra]]. Disse komt heuwdzakelik in t noordn vuur. Twee [[Kulangosproakn]], dee't vroger nog wal es bie t Gur ereknd wördn, komt oet de middel-westelike greansstrekke. t [[Nafaanra (sproake)|Nafaanra]] in t noordn heurt bie de [[Senufosproaken|Senufo sproakfamilie]]. Wieders zeent dr nog twee [[Mandesproaken]]; t [[Bissa (sproake)|Bissa]] in t noordoostelike heukn, en t [[Ligbi (sproake)|Ligbi]], wat roond [[Kulango]] sprökn wörd.
 
 Neegn sproakn kriegnt offisjele oonderstönning van de regearing:<ref>[http://www.ghanaembassy.org/index.php?page=language-and-religion Ghanaembassy.org. Ghana -Language and Religion, [[Ambassade van Ghana in Washington, D.C.]]]. Bekekn op 9 april 2012</ref>
-[[Akan (sproake)|Akan]], [[Ewe (sproake)|Ewe]], [[Dagomba (sproake)|Dagomba]] (Dagbane), [[Adangme (sproake)|Dangme]], [[Dagaare (sproake)|Dagaare]], [[Ga (sproake)|Ga]], [[Gonja (sproake)|Gonja]], [[Kasem (sproake)|Kasem]], en [[Nzema (sproake)|Nzema]]. Skoonwal t ginne offisjele sproake is, wörd t [[Hausa (sproake)|Hausa]] as [[Lingua Franca]] sprökn oonder Ghana's [[Islam|Moslims]].  
+[[Akan (sproake)|Akan]], [[Ewe (sproake)|Ewe]], [[Dagomba (sproake)|Dagomba]] (Dagbane), [[Adangme (sproake)|Dangme]], [[Dagaare (sproake)|Dagaare]], [[Ga (sproake)|Ga]], [[Gonja (sproake)|Gonja]], [[Kasem (sproake)|Kasem]], en [[Nzema (sproake)|Nzema]]. Skoonwal t ginne offisjele sproake is, wörd t [[Hausa (sproake)|Hausa]] as [[Lingua Franca]] sprökn oonder Ghana's [[Islam|Moslims]].
 
 Seend [[2007]] geewt alle hogeskooln en universiteatn in Ghana les in [[Standaard Sjinees|Sjinees]]. Dit nieje vak gef de gröainde wearldposisie van de [[Volksreppubliek Sjina]] wier, en de gode verhoolding tusken beaide laandn.<ref>[http://www.modernghana.com/news/135274/1/teach-chinese-language-in-schools-minister.html ModernGhana.com. ''Teach Chinese language in schools – Minister.] Skreewn op 4 mei 2007. Bekekn op 12 januwoari 2011</ref> Doarnöast wörd dr aal mear [[Fraans]]k egeewn op de skooln, umdet Ghana lid is van de [[Organisation Internationale de la Francophonie|OIF]].<ref>[http://www.francophonie.org/IMG/pdf/Fcs_enjeu_21esiecle.pdf Francophonie.org. ''Le française, enjeu du XXI Sisécle''] Bekekn op 17 dezember 2010. (Fraansk)</ref>
 
 === Gezoondheaid ===
-In 2009 was de leawnsverwochting ongevear 63 vuur kearls en vrouwleu<ref>[https://www.cia.gov/library/publications/the-world-factbook/geos/gh.html CIA – The World Factbook.] Bekekn op 21 desember 2010</ref> met ne keenderstoarfte van 51 op de 1000. Vrouwleu kriegnt gemiddeld 4 keender. Dr zeent 15 dokters en 93 verpleagers per 100.000 leu.<ref>[http://www.afro.who.int/home/countries/fact_sheets/ghana.pdf Afro.who.int]. Bekekn op 26 juni 2010</ref> 4.5% van t laand's BNP wör in 2003 besteadt an gezoondheaidszorg. Ze probeert t zorgstelsel wal an te pakn, mer det geet lastig umdet dr fleenk wat korrupsie binn t Ministerie van Volksgezoondheaid, de Ghanese Gezoondheaidshulpe en Nasjonale Verzekeringsstelsel, t National Health Insurance Service (NHIS) is.<ref>[http://www.modernghana.com/news/355988/1/corruption-in-nhis.html Modernghana.com. ''Corruption In NHIS''] Skreewn op 14 oktober 2011. Bekekn op 7 januwoari 2011</ref> De Europese Kommissie skeunk €52 miljoen an Ghana um wat te doon an de hoge moderstoarfte en de modergezoondheaid op n heuger plan te kriegn.
+In 2009 was de leawnsverwochting ongevear 63 vuur kearls en vrouwleu<ref>[https://www.cia.gov/library/publications/the-world-factbook/geos/gh.html CIA – The World Factbook.] Bekekn op 21 desember 2010</ref> met ne keenderstoarfte van 51 op de 1000. Vrouwleu kriegnt gemiddeld 4 keender. Dr zeent 15 dokters en 93 verpleagers per 100.000 leu.<ref>[http://www.afro.who.int/home/countries/fact_sheets/ghana.pdf Afro.who.int]. Bekekn op 26 juni 2010</ref> 4,5% van t laand's BNP wör in 2003 besteadt an gezoondheaidszorg. Ze probeert t zorgstelsel wal an te pakn, mer det geet lastig umdet dr fleenk wat korrupsie binn t Ministerie van Volksgezoondheaid, de Ghanese Gezoondheaidshulpe en Nasjonale Verzekeringsstelsel, t National Health Insurance Service (NHIS) is.<ref>[http://www.modernghana.com/news/355988/1/corruption-in-nhis.html Modernghana.com. ''Corruption In NHIS''] Skreewn op 14 oktober 2011. Bekekn op 7 januwoari 2011</ref> De Europese Kommissie skeunk €52 miljoen an Ghana um wat te doon an de hoge moderstoarfte en de modergezoondheaid op n heuger plan te kriegn.
 
 Wieders is dr in Ghana, net as in de rest van [[Afrika]], n groot [[HIV/AIDS]]probleem. In 2004 wör dr eskatt at dr ongevear 404.000 Ghaneezn besmet zeent met HIV/AIDS. Doarnöast komt dr völle oet de tied duur [[Malaria]]. Völle zeektes zeent t gevolg van t tooverdan te weainig etn kriegn, woerduur't t ofweerstelsel van de leu verzwakt is.
 
@@ -162,8 +162,8 @@ Ghana hef völle kulturele verskiln, dee't vuur n n groot deel wierumme goat op 
 Oet t laand komt ook verskeaidene [[boksn|boksers]] van wearldklasse, zo as de dreevooldig wearldkampioenn [[Azumah Nelson]] en [[Nana Konadu|Nana Yaw Konadu]] en [[Ike Quartey]] en [[Joshua Clotty]].
 
 === Keunst ===
-[[Bestaand:Kent wove.jpg|thumb|right|[[Akan people|Akan]] Kente-stof|upright]]
-Linngood is onmeundig belangriek vuur de Ghanese kultuur. Weafsels wordt gebroekt vuur tradisjonele en moderne kleare. Verskeaidene symbooln en kluurn in n stof hebt bepoalde betekenisse. [[Kente-stof|Kente]] is woarskienlik de bekeandse Ghanese stof. Kente is n ceremonieel, met de haand ewöawn stof van de [[Akan (volk)|Akan]]. Streppels van ongevear 10 cm breed wordt an mekoar eneeid töt gröttere lapn stof. De stofn wordt in verskeaidene kluurn, gröttes en oontwoarpn ewöawn, wat allemoal wier bie bepoalde sosjale en relligieuze gebuurtenisse heurt. Kultureel bekekn is Kente mear as allene mer nen stof. t Is op ne bepoalde wieze n ewöawn geskiedenisverhaal. n Naam Kente keump van t [[Twi]]-woard ''kɛntɛn'' en beteeknt doar ''maande''. De eerste kente-weawers gebreukn [[raffia]]-veazels um stofn te weawn deedn deankn an maandn, en doarumme wördn ze ''kenten ntoma'' (maandnstof) eneumd. 
+[[Bestaand:Kent wove.jpg|thumb|[[Akan people|Akan]] Kente-stof|upright]]
+Linngood is onmeundig belangriek vuur de Ghanese kultuur. Weafsels wordt gebroekt vuur tradisjonele en moderne kleare. Verskeaidene symbooln en kluurn in n stof hebt bepoalde betekenisse. [[Kente-stof|Kente]] is woarskienlik de bekeandse Ghanese stof. Kente is n ceremonieel, met de haand ewöawn stof van de [[Akan (volk)|Akan]]. Streppels van ongevear 10&nbsp;cm breed wordt an mekoar eneeid töt gröttere lapn stof. De stofn wordt in verskeaidene kluurn, gröttes en oontwoarpn ewöawn, wat allemoal wier bie bepoalde sosjale en relligieuze gebuurtenisse heurt. Kultureel bekekn is Kente mear as allene mer nen stof. t Is op ne bepoalde wieze n ewöawn geskiedenisverhaal. n Naam Kente keump van t [[Twi]]-woard ''kɛntɛn'' en beteeknt doar ''maande''. De eerste kente-weawers gebreukn [[raffia]]-veazels um stofn te weawn deedn deankn an maandn, en doarumme wördn ze ''kenten ntoma'' (maandnstof) eneumd.
 
 Ghana hef internasjonaal anzeen met verskeaidene keunsteners, zo as de [[Kane Kwei Carpentry Workshop]] en beeldhouwer [[Eric Adjetey Anang]], den't doodskiste ontwoarpet.
 
